Working on Slack bot

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,3 +4,11 @@ akka {
     snapshot-store.plugin = "inmemory-snapshot-store"
   }
 }
+
+api {
+  key = "xoxb-122513415617-lTq9y3KL7DGiT8mrmCW010qY"
+
+  base.url = "https://slack.com/api/"
+}
+
+websocket.key = "VzvnBtPslX2btvwN3OSp6CuVyeU="
