Move user properties

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,9 +6,8 @@ akka {
 }
 
 api {
-  key = "xoxb-122513415617-lTq9y3KL7DGiT8mrmCW010qY"
-
+  key = "SET-API-KEY-HERE"
   base.url = "https://slack.com/api/"
 }
 
-websocket.key = "VzvnBtPslX2btvwN3OSp6CuVyeU="
+websocket.key = "SET-BASE64-KEY-HERE"
