File snapshot store + json serialisation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,17 @@
 akka {
+  actor {
+    serializers {
+      java = "akka.serialization.JavaSerializer"
+      jackson-json-serializer = "no.nextgentel.oss.akkatools.serializing.JacksonJsonSerializer"
+    }
+    serialization-bindings {
+      "no.nextgentel.oss.akkatools.serializing.JacksonJsonSerializable" = jackson-json-serializer
+    }
+  }
   persistence {
     journal.plugin = "inmemory-journal"
-    snapshot-store.plugin = "inmemory-snapshot-store"
+    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+    snapshot-store.local.dir = "snapshots"
   }
 }
 
