Put some application settings

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -20,3 +20,16 @@ api {
 }
 
 websocket.key = "SET-BASE64-KEY-HERE"
+
+app-settings {
+  alarm-thresholds {
+    batteryLevel = 20.0
+    relativeMoisture = 70.0
+    relativeMoistureDeltaFromAverage = 20.0
+  }
+  keep-stats-for-days = 1
+  messaging {
+    channel = "channel"
+    sensorPath = "user/sensorActor"
+  }
+}
