First working version

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,6 +31,6 @@ app-settings {
   keep-stats-for-days = 1
   messaging {
     channel = "channel"
-    sensorPath = "user/sensorActor"
+    coordinatorPath = "user/coordinator"
   }
 }
