Documentation and refactoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,13 +24,14 @@ websocket.key = "SET-BASE64-KEY-HERE"
 
 app-settings {
   alarm-thresholds {
-    batteryLevel = 20.0
+    batteryLevel = 40.0
     relativeMoisture = 70.0
-    relativeMoistureDeltaFromAverage = 20.0
+    relativeMoistureDeltaFromAverage = 10.0
   }
-  keep-stats-for-days = 1
+  keep-stats-for-days = 30
   messaging {
     channel = "channel"
     coordinatorPath = "user/coordinator"
   }
+  serverPort = 9999
 }
